# Assignment-PointCare

./: .gitignore  README.md  docker-compose.yaml
caddy/: Caddyfile
ingestion-service/: CMakeLists.txt  Dockerfile
ingestion-service/src/: main.cpp
llm/: Dockerfile  client_example.py  download-model.ps1  download-model.sh
mcp-server/: Dockerfile  api_server.py  influxdb_queries.py  mcp_server.py  pyproject.toml  test_mcp.py
nginx/: nginx.conf
